Config transformations are added

--- a/Module/App_Config/Include/RecommendedRenderings/RecommendedRenderings.config
+++ b/Module/App_Config/Include/RecommendedRenderings/RecommendedRenderings.config
@@ -44,6 +44,8 @@
             Default: Applications/16x16/windows.png
       -->
       <setting name="TreeviewRootIcon" value="Applications/16x16/windows.png" />
+
+      <setting name="RecomendedRenderingsIndex" value="recommended-placeholders-index" />
     </settings>
   </sitecore>
 </configuration>
