Post installing step is added

--- a/Module/App_Config/Include/RecommendedRenderings/RecommendedRenderings.config
+++ b/Module/App_Config/Include/RecommendedRenderings/RecommendedRenderings.config
@@ -14,14 +14,14 @@
     </controlSources>
     <settings>
       <!--  CONTENT ROOT PATH
-            Recommended Renderings will be shown just for the selected root item and his childs.
+            Recommended Renderings will be shown just for the selected root item and his children.
             It is better to specify a content root which you currently work with. It will reduce a time of rebuild index 
             and preparing the recommended renderings list.
             Default: /sitecore/content
       -->
       <setting name="ContentRootPath" value="/sitecore/content" />
       <!--  DATABASE NAME
-            Determines the database that used by the Recommended Renderings module for preparing the list of recommendations.
+            Determines the database that used by the Recommended Renderings module to prepare the list of recommendations.
             It have to be the same database which is configured for the "recommended-renderings-index" index.
             Usually it is "master" and wouldn't be changed.
             Default: master
@@ -33,7 +33,7 @@
       -->
       <setting name="IsExpandedDefault" value="false" />
       <!--  PLACEHOLDER SETTINGS ROOT PATH
-            Recommended placeholders list will be shown just for the selected root item and his childs.
+            Recommended placeholders list will be shown just for the selected root item and his children.
             It is better to specify a content root which you currently work with. It will reduce a time of rebuild index 
             and preparing the recommended placeholders list.
             Default: /sitecore/layout/Placeholder Settings
